# crops

./: .gitignore  Cargo.toml  README.md  flake.nix
crops/: Cargo.toml  cbindgen.toml
crops-derive/src/: lib.rs
crops/crops-derive/: Cargo.toml
crops/crops-derive/src/: lib.rs
crops/python/: default.nix  pyproject.toml
crops/src/: lib.rs  tests.rs  traits.rs  utils.rs
crops/tests/: enum.rs  struct.rs
examples/simple/: Cargo.toml  cbindgen.toml  expanded.rs  out.h
examples/simple/include/: simple.h
examples/simple/src/: lib.rs
