[package]
name = "crops"
version = "0.1.0"
edition = "2021"

[dependencies]
crops-derive = { path = "crops-derive" }
libc = "0.2.153"

[workspace]
members = ["crops-derive"]

[dev-dependencies]
trybuild = "1.0.91"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
